Fix so that whitespace is kept. As suggested by @irony in #gh-29.

--- a/app/assets/stylesheets/loungechats.css.scss
+++ b/app/assets/stylesheets/loungechats.css.scss
@@ -35,6 +35,9 @@
 	}
 }
 
+.output {
+	white-space: pre-wrap;
+}
 
 .output_message {
 
